Head Tag Commit

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>Pottersland Schools</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="The Pottersland School" name="keywords">
+    <meta content="A place of discovery, character development and academic excellence" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
